--- a/app/login-tag/login-tag.html
+++ b/app/login-tag/login-tag.html
@@ -2,7 +2,7 @@
     <div class="page-header">
     </div>
     <div class="row">
-        <div class="col-lg-offset-4 col-lg-3 col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6 col-xs-12">
+        <div class="col-lg-offset-3 col-lg-3 col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6 col-xs-12">
             <form>
                 <div class="form-group">
                     <label for="InputUsername">Username</label>
@@ -15,11 +15,16 @@
                     <label for="InputPassword">Password</label>
                     <div class="input-group">
                         <span class="glyphicon glyphicon-lock input-group-addon"></span>
-                        <input type="password" class="form-control mormontInput" id="InputPassword" placeholder="Password">
+                        <input type="password" class="form-control mormontInput" id="InputPassword"
+                               placeholder="Password">
                     </div>
                 </div>
                 <button type="submit" class="btn btn-default submit mormontButton">Login</button>
             </form>
+        </div>
+        <div class="col-lg-offset-0 col-lg-3 col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6 col-xs-12 title">
+            <span class="univName">UBB</span>
+            <span class="appName">EasyDocs</span>
         </div>
     </div>
 </div>
