--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>RavenApp</title>
+    <title>EasyDocsUBBApp</title>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <!-- include: "type": "css", "files": "**/*.css" -->
     <link rel="stylesheet" type="text/css" href="app.css" />
@@ -25,8 +25,10 @@
     <!-- endbower -->
 
     <!-- include: "type": "js", "files": "**/*.js" -->
+    <script src="AppSrv.js"></script>
     <script src="app.js"></script>
     <script src="login-tag/login-tag.js"></script>
+    <script src="services/LoginSrv.js"></script>
     <!-- /include -->
     <script src="//localhost:35729/livereload.js"></script>
 </body>
