--- a/app/login-tag/login-tag.html
+++ b/app/login-tag/login-tag.html
@@ -8,7 +8,9 @@
                     <label for="InputUsername">Username</label>
                     <div class="input-group">
                         <span class="glyphicon glyphicon-user input-group-addon"></span>
-                        <input type="text" class="form-control mormontInput" id="InputUsername" placeholder="Username">
+                        <input type="text" class="form-control mormontInput" id="InputUsername"
+                               placeholder="Username"
+                               ng-model="$ctrl.usrn">
                     </div>
                 </div>
                 <div class="form-group">
@@ -16,10 +18,11 @@
                     <div class="input-group">
                         <span class="glyphicon glyphicon-lock input-group-addon"></span>
                         <input type="password" class="form-control mormontInput" id="InputPassword"
-                               placeholder="Password">
+                               placeholder="Password"
+                               ng-model="$ctrl.pswd">
                     </div>
                 </div>
-                <button type="submit" class="btn btn-default submit mormontButton">Login</button>
+                <button ng-click="$ctrl.login()" type="submit" class="btn btn-default submit mormontButton">Login</button>
             </form>
         </div>
         <div class="col-lg-offset-0 col-lg-3 col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6 col-xs-12 title">
