--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
     <!-- include: "type": "js", "files": "**/*.js" -->
     <script src="AppSrv.js"></script>
     <script src="app.js"></script>
+    <script src="appconfig.js"></script>
     <script src="login-tag/login-tag.js"></script>
     <script src="services/LoginSrv.js"></script>
     <!-- /include -->
