--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
     <script src="../bower_components/lodash/lodash.js"></script>
     <script src="../bower_components/restangular/dist/restangular.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../bower_components/angular-base64/angular-base64.js"></script>
     <!-- endbower -->
 
     <!-- include: "type": "js", "files": "**/*.js" -->
