--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <!-- include: "type": "css", "files": "**/*.css" -->
     <link rel="stylesheet" type="text/css" href="app.css" />
     <link rel="stylesheet" type="text/css" href="login-tag/login-tag.css" />
+    <link rel="stylesheet" type="text/css" href="main-layout/main-layout.css" />
     <!-- /include -->
 </head>
 <body ng-app="EasyDocsUBBApp">
@@ -29,6 +30,7 @@
     <script src="app.js"></script>
     <script src="appService.js"></script>
     <script src="login-tag/login-tag.js"></script>
+    <script src="main-layout/main-layout.js"></script>
     <script src="services/LoginSrv.js"></script>
     <!-- /include -->
     <script src="//localhost:35729/livereload.js"></script>
