SideBar from scratch

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="app.css" />
     <link rel="stylesheet" type="text/css" href="login-tag/login-tag.css" />
     <link rel="stylesheet" type="text/css" href="main-layout/main-layout.css" />
+    <link rel="stylesheet" type="text/css" href="side-bar/side-bar.css" />
     <!-- /include -->
 </head>
 <body ng-app="EasyDocsUBBApp">
@@ -24,6 +25,7 @@
     <script src="../bower_components/restangular/dist/restangular.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/angular-base64/angular-base64.js"></script>
+    <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
 
     <!-- include: "type": "js", "files": "**/*.js" -->
@@ -32,6 +34,7 @@
     <script src="login-tag/login-tag.js"></script>
     <script src="main-layout/main-layout.js"></script>
     <script src="services/LoginSrv.js"></script>
+    <script src="side-bar/side-bar.js"></script>
     <!-- /include -->
     <script src="//localhost:35729/livereload.js"></script>
 </body>
