--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,8 @@
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/angular-base64/angular-base64.js"></script>
     <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
 
     <!-- include: "type": "js", "files": "**/*.js" -->
@@ -33,7 +35,7 @@
     <script src="appService.js"></script>
     <script src="login-tag/login-tag.js"></script>
     <script src="main-layout/main-layout.js"></script>
-    <script src="services/LoginSrv.js"></script>
+    <script src="services/AppLoginSrv.js"></script>
     <script src="side-bar/side-bar.js"></script>
     <!-- /include -->
     <script src="//localhost:35729/livereload.js"></script>
