--- a/app/side-bar/side-bar.html
+++ b/app/side-bar/side-bar.html
@@ -1,33 +1,12 @@
-<!--<div ng-class="{'toggled':$ctrl.toggleSideBar()}">-->
-<!--Test {{$ctrl.toggleSideBar()}}-->
-<!--</div>-->
-<!--<div id="sidebar-wrapper" ng-class="{'toggled':$ctrl.toggleSideBar()}">-->
-    <ul class="sidebar-nav">
-        <li class="sidebar-brand">
-            <a href="#">
-                Start Bootstrap
-            </a>
-        </li>
-        <li>
-            <a href="#">Dashboard</a>
-        </li>
-        <li>
-            <a href="#">Shortcuts</a>
-        </li>
-        <li>
-            <a href="#">Overview</a>
-        </li>
-        <li>
-            <a href="#">Events</a>
-        </li>
-        <li>
-            <a href="#">About</a>
-        </li>
-        <li>
-            <a href="#">Services</a>
-        </li>
-        <li>
-            <a href="#">Contact</a>
-        </li>
-    </ul>
-<!--</div>-->
+<ul class="sidebar-nav">
+    <li class="sidebar-brand">
+        Menu
+    </li>
+
+    <li>
+        <button type="button" class="btn btn-default mormontInput" ng-click="$ctrl.handleSidebar()">Back to main screen</button>
+    </li>
+    <li>
+        <button type="button" class="btn btn-default mormontInput" ng-click="$ctrl.logout()">Logout</button>
+    </li>
+</ul>
