HTML&CSS - Dispozitia rectorului form

--- a/app/main-layout/main-layout.html
+++ b/app/main-layout/main-layout.html
@@ -15,7 +15,10 @@
                     <button type="button" class="btn btn-default mormontInput" ng-click="$ctrl.handleSidebar()">
                         <span class="glyphicon glyphicon-th-list"></span>
                     </button>
-                    <uib-tab class="mormontTab" heading="Documente proprii">Tab 1 content</uib-tab>
+                    <uib-tab class="mormontTab" heading="Documente proprii">
+                        <drform-tag>
+                        </drform-tag>
+                    </uib-tab>
                     <uib-tab class="mormontTab" heading="Documente in flux">Tab 1 content</uib-tab>
                     <uib-tab class="mormontTab" heading="Log documente">Tab 1 content</uib-tab>
                     <uib-tab class="mormontTab" heading="Administrare utilizatori si fluxuri">Tab 1 content</uib-tab>
