--- a/app/side-bar/side-bar.html
+++ b/app/side-bar/side-bar.html
@@ -4,7 +4,13 @@
     </li>
 
     <li>
-        <button type="button" class="btn btn-default mormontInput" ng-click="$ctrl.handleSidebar()">Back to main screen</button>
+        <button type="button" class="btn btn-default mormontInput" ng-click="$ctrl.handleSidebar()">Inapoi la ecranul principal</button>
+    </li>
+    <li>
+        <button type="button" class="btn btn-default mormontInput" ng-click="">Creeaza document 'Dispozitia rectorului'</button>
+    </li>
+    <li>
+        <button type="button" class="btn btn-default mormontInput" ng-click="">Creeaza document 'Desfasurarea achizitiilor'</button>
     </li>
     <li>
         <button type="button" class="btn btn-default mormontInput" ng-click="$ctrl.logout()">Logout</button>
