--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <!-- include: "type": "css", "files": "**/*.css" -->
     <link rel="stylesheet" type="text/css" href="app.css" />
+    <link rel="stylesheet" type="text/css" href="dr-doc/drform-tag.css" />
     <link rel="stylesheet" type="text/css" href="login-tag/login-tag.css" />
     <link rel="stylesheet" type="text/css" href="main-layout/main-layout.css" />
     <link rel="stylesheet" type="text/css" href="side-bar/side-bar.css" />
@@ -33,6 +34,7 @@
     <!-- include: "type": "js", "files": "**/*.js" -->
     <script src="app.js"></script>
     <script src="appService.js"></script>
+    <script src="dr-doc/drform-tag.js"></script>
     <script src="login-tag/login-tag.js"></script>
     <script src="main-layout/main-layout.js"></script>
     <script src="services/AppLoginSrv.js"></script>
