Call DR + form DA (HTML&CSS, incomplete)

--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,12 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <!-- include: "type": "css", "files": "**/*.css" -->
     <link rel="stylesheet" type="text/css" href="app.css" />
+    <link rel="stylesheet" type="text/css" href="da-doc/daform-tag.css" />
     <link rel="stylesheet" type="text/css" href="dr-doc/drform-tag.css" />
+    <link rel="stylesheet" type="text/css" href="fluxdocs-tag/fluxdocs-tag.css" />
     <link rel="stylesheet" type="text/css" href="login-tag/login-tag.css" />
     <link rel="stylesheet" type="text/css" href="main-layout/main-layout.css" />
+    <link rel="stylesheet" type="text/css" href="mydocs-tag/mydocs-tag.css" />
     <link rel="stylesheet" type="text/css" href="side-bar/side-bar.css" />
     <!-- /include -->
 </head>
@@ -34,9 +37,12 @@
     <!-- include: "type": "js", "files": "**/*.js" -->
     <script src="app.js"></script>
     <script src="appService.js"></script>
+    <script src="da-doc/daform-tag.js"></script>
     <script src="dr-doc/drform-tag.js"></script>
+    <script src="fluxdocs-tag/fluxdocs-tag.js"></script>
     <script src="login-tag/login-tag.js"></script>
     <script src="main-layout/main-layout.js"></script>
+    <script src="mydocs-tag/mydocs-tag.js"></script>
     <script src="services/AppLoginSrv.js"></script>
     <script src="side-bar/side-bar.js"></script>
     <!-- /include -->
