--- a/app/dr-doc/drform-tag.html
+++ b/app/dr-doc/drform-tag.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                     <label for="inputSumATM">Suma</label>
-                    <input type="number" class="form-control mormontInput" id="inputSumATM" ng-model="$ctrl.sumaATM" value="0">
+                    <input type="number" class="form-control mormontInput" id="inputSumATM" ng-model="$ctrl.sumaATM" value="0" placeholder="0">
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
                     <label class="form-check-label" for="ATMron">RON</label>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                     <label for="inputSumAP">Suma (RON)</label>
-                    <input type="number" class="form-control mormontInput" id="inputSumAP" ng-model="$ctrl.sumaAP" value="0">
+                    <input type="number" class="form-control mormontInput" id="inputSumAP" ng-model="$ctrl.sumaAP" value="0" placeholder="0">
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
                     <label for="inputSrcAP">Sursa finantare</label>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                     <label for="inputSumA">Suma</label>
-                    <input type="number" class="form-control mormontInput" id="inputSumA" ng-model="$ctrl.sumaA" value="0">
+                    <input type="number" class="form-control mormontInput" id="inputSumA" ng-model="$ctrl.sumaA" value="0" placeholder="0">
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
                     <label class="form-check-label" for="Ausd">USD</label>
@@ -190,7 +190,7 @@
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                     <label for="inputSumE">Suma (EUR)</label>
-                    <input type="number" class="form-control mormontInput" id="inputSumE" ng-model="$ctrl.sumaE" value="0">
+                    <input type="number" class="form-control mormontInput" id="inputSumE" ng-model="$ctrl.sumaE" value="0" placeholder="0">
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 ">
                     <label for="inputSrcA">Sursa finantare</label>
@@ -227,7 +227,7 @@
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                     <label for="inputSumTID">Suma</label>
-                    <input type="number" class="form-control mormontInput" id="inputSumTID" ng-model="$ctrl.sumaTID" value="0">
+                    <input type="number" class="form-control mormontInput" id="inputSumTID" ng-model="$ctrl.sumaTID" value="0" placeholder="0">
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
                     <label class="form-check-label" for="TIDusd">USD</label>
@@ -270,11 +270,11 @@
 
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                     <label for="inputCpZD">Cuantum / zi</label>
-                    <input type="number" class="form-control mormontInput" id="inputCpZD" ng-model="$ctrl.diurnaCpz" value="0">
+                    <input type="number" class="form-control mormontInput" id="inputCpZD" ng-model="$ctrl.diurnaCpz" value="0" placeholder="0">
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                     <label for="inputNZD">Numar de zile</label>
-                    <input type="number" class="form-control mormontInput" id="inputNZD" ng-model="$ctrl.diurnaNz" value="0">
+                    <input type="number" class="form-control mormontInput" id="inputNZD" ng-model="$ctrl.diurnaNz" value="0" placeholder="0">
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                     <label for="inputSrcD">Sursa finantare</label>
@@ -291,7 +291,7 @@
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                     <label for="inputSumES">Suma (EUR)</label>
-                    <input type="number" class="form-control mormontInput" id="inputSumES" ng-model="$ctrl.sumaES" value="0">
+                    <input type="number" class="form-control mormontInput" id="inputSumES" ng-model="$ctrl.sumaES" value="0" placeholder="0">
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 ">
                     <label for="inputSrcA">Sursa finantare</label>
@@ -337,11 +337,11 @@
 
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                     <label for="inputCpLBM">Cuantum / luna</label>
-                    <input type="number" class="form-control mormontInput" id="inputCpLBM" ng-model="$ctrl.bursaCL" value="0">
+                    <input type="number" class="form-control mormontInput" id="inputCpLBM" ng-model="$ctrl.bursaCL" value="0" placeholder="0">
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                     <label for="inputNLBM">Numar de luni</label>
-                    <input type="number" class="form-control mormontInput" id="inputNLBM" ng-model="$ctrl.bursaNrL" value="0">
+                    <input type="number" class="form-control mormontInput" id="inputNLBM" ng-model="$ctrl.bursaNrL" value="0" placeholder="0">
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                     <label for="inputSrcBM">Sursa finantare</label>
@@ -373,10 +373,10 @@
                             In localitatie de destinatie
                         </th>
                         <td>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.cazareDestZi" value="0">
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.cazareDestZi" value="0" placeholder="0">
                         </td>
                         <td>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.cazareDestNrZile" value="0">
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.cazareDestNrZile" value="0" placeholder="0">
                         </td>
                         <td>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
@@ -397,10 +397,10 @@
                             Pe durata efectuarii calatoriei
                         </th>
                         <td>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.cazareCalatorieZi" value="0">
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.cazareCalatorieZi" value="0" placeholder="0">
                         </td>
                         <td>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.cazareCalatorieNrZile" value="0">
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.cazareCalatorieNrZile" value="0" placeholder="0">
                         </td>
                         <td>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
@@ -440,7 +440,7 @@
                             Taxe conferinta
                         </th>
                         <td>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTConferinta" value="0">
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTConferinta" value="0" placeholder="0">
                         </td>
                         <td>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
@@ -462,7 +462,7 @@
                         </th>
 
                         <td>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTViza" value="0">
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTViza" value="0" placeholder="0">
                         </td>
                         <td>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
@@ -484,7 +484,7 @@
                         </th>
 
                         <td>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTMembru" value="0">
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTMembru" value="0" placeholder="0">
                         </td>
                         <td>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
@@ -506,7 +506,7 @@
                         </th>
 
                         <td>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTAutostrada" value="0">
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTAutostrada" value="0" placeholder="0">
                         </td>
                         <td>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
@@ -519,7 +519,7 @@
                             </div>
                         </td>
                         <td>
-                            <input type="text" class="form-control mormontInput" ng-model="$ctrl.finantareTAutostrada" value="0">
+                            <input type="text" class="form-control mormontInput" ng-model="$ctrl.finantareTAutostrada">
                         </td>
                     </tr>
                     <tr>
@@ -528,7 +528,7 @@
                         </th>
 
                         <td>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTParcare" value="0">
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTParcare" value="0" placeholder="0">
                         </td>
                         <td>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
@@ -550,7 +550,7 @@
                         </th>
 
                         <td>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTVaccin" value="0">
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTVaccin" value="0" placeholder="0">
                         </td>
                         <td>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
@@ -572,7 +572,7 @@
                         </th>
 
                         <td>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTAC" value="0">
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTAC" value="0" placeholder="0">
                         </td>
                         <td>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
@@ -594,7 +594,7 @@
                         </th>
 
                         <td>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTAM" value="0">
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaTAM" value="0" placeholder="0">
                         </td>
                         <td>
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
@@ -639,15 +639,15 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 centered-vertically">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <label for="avansEUR">Suma (EUR)</label>
-                    <input type="number" class="form-control mormontInput" id="avansEUR" ng-model="$ctrl.sumaEURavans" value="0">
+                    <input type="number" class="form-control mormontInput" id="avansEUR" ng-model="$ctrl.sumaEURavans" value="0" placeholder="0">
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <label for="avansRON">Suma (RON)</label>
-                    <input type="number" class="form-control mormontInput" id="avansRON" ng-model="$ctrl.sumaRONavans" value="0">
+                    <input type="number" class="form-control mormontInput" id="avansRON" ng-model="$ctrl.sumaRONavans" value="0" placeholder="0">
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <label for="avansUSD">Suma (USD)</label>
-                    <input type="number" class="form-control mormontInput" id="avansUSD" ng-model="$ctrl.sumaUSDavans" value="0">
+                    <input type="number" class="form-control mormontInput" id="avansUSD" ng-model="$ctrl.sumaUSDavans" value="0" placeholder="0">
                 </div>
             </div>
         </div>
