--- a/app/da-doc/daform-tag.html
+++ b/app/da-doc/daform-tag.html
@@ -38,13 +38,13 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                     <label for="inputSumB">Suma (RON)</label>
-                    <input type="number" class="form-control mormontInput" id="inputSumB" ng-model="$ctrl.sumaB"
-                           value="0" placeholder="0">
+                    <input type="number" class="form-control mormontInput" id="inputSumB"
+                           value="{{$ctrl.getSumaTotalaSolicitata()}}" placeholder="0" disabled>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <label>Suma (RON) aprobata de serviciul `Contabilitate`</label>
-                    <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaBAC"
-                           value="0" placeholder="0" disabled>
+                    <input type="number" class="form-control mormontInput"
+                           value="{{$ctrl.getSumaTotalaAprobata()}}" placeholder="0" disabled>
                 </div>
             </div>
 
@@ -80,7 +80,8 @@
                         </div>
                         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                             <label for="inputSumDIFN">Suma (RON)</label>
-                            <input type="number" class="form-control mormontInput" id="inputSumDIFN" ng-model="$ctrl.sumaDIFN"
+                            <input type="number" class="form-control mormontInput" id="inputSumDIFN"
+                                   ng-model="$ctrl.sumaDIFN"
                                    value="0" placeholder="0">
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
@@ -101,7 +102,8 @@
                         </div>
                         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                             <label for="inputSumDIFI">Suma (RON)</label>
-                            <input type="number" class="form-control mormontInput" id="inputSumDIFI" ng-model="$ctrl.sumaDIFI"
+                            <input type="number" class="form-control mormontInput" id="inputSumDIFI"
+                                   ng-model="$ctrl.sumaDIFI"
                                    value="0" placeholder="0">
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
@@ -122,7 +124,8 @@
                         </div>
                         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                             <label for="inputSumDICTA">Suma (RON)</label>
-                            <input type="number" class="form-control mormontInput" id="inputSumDICTA" ng-model="$ctrl.sumaDICTA"
+                            <input type="number" class="form-control mormontInput" id="inputSumDICTA"
+                                   ng-model="$ctrl.sumaDICTA"
                                    value="0" placeholder="0">
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
@@ -138,17 +141,262 @@
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                             <label>Suma (RON)</label>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaCT"
-                                   value="0" placeholder="0" disabled>
+                            <input type="number" class="form-control mormontInput"
+                                   value="{{$ctrl.getSumaCercetareSolicitata()}}" placeholder="0" disabled>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                             <label>Suma (RON) aprobata de serviciul `Contabilitate`</label>
-                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaCTAC"
+                            <input type="number" class="form-control mormontInput"
+                                   value="{{$ctrl.getSumaCercetareAprobata()}}" placeholder="0" disabled>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 centered-vertically chenar">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                    <label>SPONSORIZARI</label>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                    <label for="inputSponsor">Denumire sponsor</label>
+                    <input type="text" class="form-control mormontInput" id="inputSponsor"
+                           placeholder="Denumire sponsor..." ng-model="$ctrl.sponsor">
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                    <label for="inputSumS">Suma (RON)</label>
+                    <input type="number" class="form-control mormontInput" id="inputSumS" ng-model="$ctrl.sumaS"
+                           value="0" placeholder="0">
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <label>Suma (RON) aprobata de serviciul `Contabilitate`</label>
+                    <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaSAC"
+                           value="0" placeholder="0" disabled>
+                </div>
+            </div>
+
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 centered-vertically chenar">
+                <div class="nested col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 row sub-title">
+                        <label>ALTELE:</label>
+                    </div>
+
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 centered-vertically">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                            <label>Proiecte din fonduri structurale</label>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                            <label for="inputDIFS">Date de identificare</label>
+                            <input type="text" class="form-control mormontInput" id="inputDIFS"
+                                   placeholder="Date de identificare..." ng-model="$ctrl.DIFS">
+                        </div>
+                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                            <label for="inputSumDIFS">Suma (RON)</label>
+                            <input type="number" class="form-control mormontInput" id="inputSumDIFS"
+                                   ng-model="$ctrl.sumaDIFS"
+                                   value="0" placeholder="0">
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                            <label>Suma (RON) aprobata de serviciul `Contabilitate`</label>
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaDIFSAC"
                                    value="0" placeholder="0" disabled>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 centered-vertically">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                            <label>Proiecte cu finantare externa</label>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                            <label for="inputDIFE">Date de identificare</label>
+                            <input type="text" class="form-control mormontInput" id="inputDIFE"
+                                   placeholder="Date de identificare..." ng-model="$ctrl.DIFE">
+                        </div>
+                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                            <label for="inputSumDIFE">Suma (RON)</label>
+                            <input type="number" class="form-control mormontInput" id="inputSumDIFE"
+                                   ng-model="$ctrl.sumaDIFE"
+                                   value="0" placeholder="0">
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                            <label>Suma (RON) aprobata de serviciul `Contabilitate`</label>
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaDIFEAC"
+                                   value="0" placeholder="0" disabled>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 centered-vertically">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                            <label>Contracte cu terti/altele</label>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                            <label for="inputDITA">Date de identificare</label>
+                            <input type="text" class="form-control mormontInput" id="inputDITA"
+                                   placeholder="Date de identificare..." ng-model="$ctrl.DITA">
+                        </div>
+                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                            <label for="inputSumDITA">Suma (RON)</label>
+                            <input type="number" class="form-control mormontInput" id="inputSumDITA"
+                                   ng-model="$ctrl.sumaDITA"
+                                   value="0" placeholder="0">
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                            <label>Suma (RON) aprobata de serviciul `Contabilitate`</label>
+                            <input type="number" class="form-control mormontInput" ng-model="$ctrl.sumaDITAAC"
+                                   value="0" placeholder="0" disabled>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 centered-vertically">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                            <label>TOTAL:</label>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                            <label>Suma (RON)</label>
+                            <input type="number" class="form-control mormontInput"
+                                   value="{{$ctrl.getSumaAlteleSolicitata()}}" placeholder="0" disabled>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                            <label>Suma (RON) aprobata de serviciul `Contabilitate`</label>
+                            <input type="number" class="form-control mormontInput"
+                                   value="{{$ctrl.getSumaAlteleAprobata()}}" placeholder="0" disabled>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+
+    <!--<div class="form-group row col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
+        <!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">-->
+            <!--<label>Suma totala solicitata(RON)</label>-->
+            <!--<input type="number" class="form-control mormontInput"-->
+                   <!--placeholder="0" ng-model="$ctrl.sumaT" disabled>-->
+        <!--</div>-->
+        <!--<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 checks">-->
+            <!--<label for="sNumerar" class="form-check-label">Numerar</label>-->
+            <!--<input type="checkbox" class="form-check-input" id="sNumerar" ng.model="$ctrl.sumaNumerar"-->
+                   <!--ng-true-value="true" ng-false-value="false">-->
+        <!--</div>-->
+    <!--</div>-->
+
+
+    <div class="form-group row col-lg-12 col-md-12 col-sm-12 col-xs-12 chenar">
+        <div class="nested col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 row sub-title">
+                <label>Detalierea cheltuielilor</label>
+            </div>
+            <div class="table-responsive col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <table class="table">
+                    <tr>
+                        <th>Nr. Crt.</th>
+                        <th>Denumirea produselor/lucrarilor/serviciilor</th>
+                        <th>UM</th>
+                        <th>Cod CPV</th>
+                        <th>Cantitate</th>
+                        <th>Pret unitar (cu TVA)</th>
+                    </tr>
+                    <tr ng-repeat="expense in $ctrl.expenses">
+                        <td>{{expense.nrCrt}}</td>
+                        <td>{{expense.artName}}</td>
+                        <td>{{expense.UM}}</td>
+                        <td>{{expense.CPV}}</td>
+                        <td>{{expense.cant}}</td>
+                        <td>{{expense.PU}}</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                <button class="btn btn-default submit mormontButton" ng-click="$ctrl.addReccord()">Adauga inregistrare
+                </button>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 centered-vertically chenar">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                    <label for="inputProdName">Denumire produs</label>
+                    <input type="text" class="form-control mormontInput"
+                           ng-model="$ctrl.newRprodName" placeholder="Denumire produs..." id="inputProdName">
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                    <label for="inputUM">UM</label>
+                    <input type="text" class="form-control mormontInput"
+                           ng-model="$ctrl.newRUM" placeholder="UM..." id="inputUM">
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                    <label for="inputCPV">CPV</label>
+                    <input type="text" class="form-control mormontInput"
+                           ng-model="$ctrl.newRCPV" placeholder="Cod CPV..." id="inputCPV">
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                    <label for="inputCant">Cantitate</label>
+                    <input type="number" class="form-control mormontInput" ng-model="$ctrl.newRC"
+                           value="0" placeholder="0" id="inputCant">
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                    <label for="inputPU">Pret unitar(cu TVA)</label>
+                    <input type="number" class="form-control mormontInput" id="inputPU" ng-model="$ctrl.newRPU"
+                           value="0" placeholder="0">
+                </div>
+            </div>
+
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 centered-vertically chenar">
+                <div class="nested col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 row sub-title">
+                        <label>Date solicitant:</label>
+                    </div>
+                    <div class="col-lg-$ col-md-4 col-sm-4 col-xs-4">
+                        <label for="inputNumeSolicitant">Nume si prenume</label>
+                        <input type="text" class="form-control mormontInput"
+                               ng-model="$ctrl.numeSolicitant" placeholder="Nume si prenume..."
+                               id="inputNumeSolicitant">
+                    </div>
+
+                    <div class="col-lg-$ col-md-4 col-sm-4 col-xs-4">
+                        <label for="inputEmailSolicitant">Nume si prenume</label>
+                        <input type="email" class="form-control mormontInput"
+                               ng-model="$ctrl.emailSolicitant" placeholder="solicitant@..."
+                               id="inputEmailSolicitant">
+                    </div>
+
+                    <div class="col-lg-$ col-md-4 col-sm-4 col-xs-4">
+                        <label for="inputTelefonSolicitant">Nume si prenume</label>
+                        <input type="tel" class="form-control mormontInput"
+                               ng-model="$ctrl.telSolicitant" placeholder="solicitant@..."
+                               id="inputTelefonSolicitant">
+                    </div>
+
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 row sub-title">
+                        <label>Date gestionar:</label>
+                    </div>
+                    <div class="col-lg-$ col-md-4 col-sm-4 col-xs-4">
+                        <label for="inputNumeGestionar">Nume si prenume</label>
+                        <input type="text" class="form-control mormontInput"
+                               ng-model="$ctrl.numeGestionar" placeholder="Nume si prenume..."
+                               id="inputNumeGestionar">
+                    </div>
+
+                    <div class="col-lg-$ col-md-4 col-sm-4 col-xs-4">
+                        <label for="inputEmailGestionar">Nume si prenume</label>
+                        <input type="email" class="form-control mormontInput"
+                               ng-model="$ctrl.emailGestionar" placeholder="solicitant@..."
+                               id="inputEmailGestionar">
+                    </div>
+
+                    <div class="col-lg-$ col-md-4 col-sm-4 col-xs-4">
+                        <label for="inputTelefonGestionar">Nume si prenume</label>
+                        <input type="tel" class="form-control mormontInput"
+                               ng-model="$ctrl.telGestionar" placeholder="solicitant@..."
+                               id="inputTelefonGestionar">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="form-group row col-lg-12 col-md-12 col-sm-12 col-xs-12 chenar">
+        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+            <button type="submit" class="btn btn-default submit mormontButton" ng-click="$ctrl.submitForm()">Inregistreaza cerere</button>
+        </div>
+        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+            <button class="btn btn-default submit mormontButton" ng-click="">Renunta</button>
+        </div>
+
     </div>
 </form>
