--- a/app/da-doc/daform-tag.html
+++ b/app/da-doc/daform-tag.html
@@ -7,7 +7,7 @@
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
             <label for="inputFacUC">Facultate/Unitatea de cercetare</label>
             <input type="text" class="form-control mormontInput" id="inputFacUC"
-                   placeholder="Facultate/Unitate de cercetare..." ng-model="$ctrl.facultate">
+                   placeholder="Facultate/Unitate de cercetare..." ng-model="$ctrl.facultateDA">
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
             <label for="inputDepLab">Departamentul/Laboratorul</label>
@@ -350,16 +350,16 @@
                     </div>
 
                     <div class="col-lg-$ col-md-4 col-sm-4 col-xs-4">
-                        <label for="inputEmailSolicitant">Nume si prenume</label>
+                        <label for="inputEmailSolicitant">Email</label>
                         <input type="email" class="form-control mormontInput"
                                ng-model="$ctrl.emailSolicitant" placeholder="solicitant@..."
                                id="inputEmailSolicitant">
                     </div>
 
                     <div class="col-lg-$ col-md-4 col-sm-4 col-xs-4">
-                        <label for="inputTelefonSolicitant">Nume si prenume</label>
+                        <label for="inputTelefonSolicitant">Telefon</label>
                         <input type="tel" class="form-control mormontInput"
-                               ng-model="$ctrl.telSolicitant" placeholder="solicitant@..."
+                               ng-model="$ctrl.telSolicitant" placeholder="tel..."
                                id="inputTelefonSolicitant">
                     </div>
 
@@ -374,16 +374,16 @@
                     </div>
 
                     <div class="col-lg-$ col-md-4 col-sm-4 col-xs-4">
-                        <label for="inputEmailGestionar">Nume si prenume</label>
+                        <label for="inputEmailGestionar">Email</label>
                         <input type="email" class="form-control mormontInput"
                                ng-model="$ctrl.emailGestionar" placeholder="solicitant@..."
                                id="inputEmailGestionar">
                     </div>
 
                     <div class="col-lg-$ col-md-4 col-sm-4 col-xs-4">
-                        <label for="inputTelefonGestionar">Nume si prenume</label>
+                        <label for="inputTelefonGestionar">Telefon</label>
                         <input type="tel" class="form-control mormontInput"
-                               ng-model="$ctrl.telGestionar" placeholder="solicitant@..."
+                               ng-model="$ctrl.telGestionar" placeholder="tel..."
                                id="inputTelefonGestionar">
                     </div>
                 </div>
