--- a/app/main-layout/main-layout.html
+++ b/app/main-layout/main-layout.html
@@ -16,17 +16,25 @@
                         <span class="glyphicon glyphicon-th-list"></span>
                     </button>
                     <uib-tab class="mormontTab" heading="Documente proprii">
-                        <drform-tag ng-show="$ctrl.drFormActive()">
-                        </drform-tag>
-                        <mydocs-tag ng-show="$ctrl.drFormInactive()">
-                        </mydocs-tag>
+                        <!--<drform-tag ng-show="$ctrl.drFormActive() && $ctrl.daFormInactive()">-->
+                        <!--</drform-tag>-->
+                        <!--<daform-tag ng-show="$ctrl.daFormActive() && $ctrl.drFormInactive()">-->
+                        <!--</daform-tag>-->
+                        <!--<mydocs-tag ng-show="$ctrl.drFormInactive() && $ctrl.daFormInactive()">-->
+                        <!--</mydocs-tag>-->
+
+                        <!--<drform-tag>-->
+                        <!--</drform-tag>-->
+                        <!--<daform-tag>-->
+                        <!--</daform-tag>-->
                     </uib-tab>
                     <uib-tab class="mormontTab" heading="Documente in flux">
                         <fluxdocs-tag></fluxdocs-tag>
                     </uib-tab>
                     <uib-tab class="mormontTab" heading="Log documente">
-                        <daform-tag>
-                        </daform-tag>
+                        <!--<daform-tag>-->
+                        <!--</daform-tag>-->
+                        <drform-tag>    </drform-tag>
                     </uib-tab>
                     <uib-tab class="mormontTab" heading="Administrare utilizatori si fluxuri">Tab 1 content</uib-tab>
                 </uib-tabset>
