--- a/app/dr-doc/drform-tag.html
+++ b/app/dr-doc/drform-tag.html
@@ -3,15 +3,14 @@
         <div class="form-title">Dispozitia rectorului (cerere pentru efectuare deplasarilor in strainatate)</div>
     </div>
 
-
     <div class="form-group row col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
             <label for="inputFunctie">Functie</label>
             <input type="text" class="form-control mormontInput" id="inputFunctie" placeholder="Functie..." ng-model="$ctrl.functie">
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-            <label for="inputFacDep">Facultate/Departament</label>
-            <input type="text" class="form-control mormontInput" id="inputFacDep"
+            <label for="inputFD">Facultate/Departament</label>
+            <input type="text" class="form-control mormontInput" id="inputFD"
                    placeholder="Facultate/Departament..." ng-model="$ctrl.facultate">
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
@@ -51,23 +50,23 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 checks">
             <label for="autoChoice" class="form-check-label">auto</label>
-            <input type="checkbox" class="form-check-input" id="autoChoice" ng.model="$ctrl.autoT" ng-true-value="true" ng-false-value="false">
+            <input type="checkbox" class="form-check-input" id="autoChoice" ng-model="$ctrl.autoT" ng-true-value="true" ng-false-value="false">
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 checks">
             <label for="autoPersChoice" class="form-check-label">auto personal</label>
-            <input type="checkbox" class="form-check-input" id="autoPersChoice" ng.model="$ctrl.autoTP" ng-true-value="true" ng-false-value="false">
+            <input type="checkbox" class="form-check-input" id="autoPersChoice" ng-model="$ctrl.autoTP" ng-true-value="true" ng-false-value="false">
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 checks">
             <label for="autoUBBChoice" class="form-check-label">auto UBB</label>
-            <input type="checkbox" class="form-check-input" id="autoUBBChoice" ng.model="$ctrl.autoTUBB" ng-true-value="true" ng-false-value="false">
+            <input type="checkbox" class="form-check-input" id="autoUBBChoice" ng-model="$ctrl.autoTUBB" ng-true-value="true" ng-false-value="false">
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 checks">
             <label for="trainChoice" class="form-check-label">tren</label>
-            <input type="checkbox" class="form-check-input" id="trainChoice" ng.model="$ctrl.trenT" ng-true-value="true" ng-false-value="false">
+            <input type="checkbox" class="form-check-input" id="trainChoice" ng-model="$ctrl.trenT" ng-true-value="true" ng-false-value="false">
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 checks">
             <label for="planeChoice" class="form-check-label">avion</label>
-            <input type="checkbox" class="form-check-input" id="planeChoice" ng.model="$ctrl.avionT" ng-true-value="true" ng-false-value="false">
+            <input type="checkbox" class="form-check-input" id="planeChoice" ng-model="$ctrl.avionT" ng-true-value="true" ng-false-value="false">
         </div>
     </div>
 
@@ -97,15 +96,15 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 checks">
             <label for="demanderChoice" class="form-check-label">solicitant</label>
-            <input type="checkbox" class="form-check-input" id="demanderChoice" ng.model="$ctrl.cheltSolicitantGen" ng-true-value="true" ng-false-value="false">
+            <input type="checkbox" class="form-check-input" id="demanderChoice" ng-model="$ctrl.cheltSolicitantGen" ng-true-value="true" ng-false-value="false">
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 checks">
             <label for="instChoice" class="form-check-label">institutia organizatoare</label>
-            <input type="checkbox" class="form-check-input" id="instChoice" ng.model="$ctrl.cheltInstOrgGen" ng-true-value="true" ng-false-value="false">
+            <input type="checkbox" class="form-check-input" id="instChoice" ng-model="$ctrl.cheltInstOrgGen" ng-true-value="true" ng-false-value="false">
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 checks">
             <label for="otherChoice" class="form-check-label">altele</label>
-            <input type="checkbox" class="form-check-input" id="otherChoice" ng.model="$ctrl.cheltAlteleGen" ng-true-value="true" ng-false-value="false">
+            <input type="checkbox" class="form-check-input" id="otherChoice" ng-model="$ctrl.cheltAlteleGen" ng-true-value="true" ng-false-value="false">
             <input type="text" class="form-control mormontInput" id="inputOtherChoice"
                    placeholder="Sursa finantare..." ng-model="$ctrl.alteleGen">
         </div>
@@ -127,13 +126,14 @@
                     <label for="inputSumATM">Suma</label>
                     <input type="number" class="form-control mormontInput" id="inputSumATM" ng-model="$ctrl.sumaATM" value="0" placeholder="0">
                 </div>
+
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 form-check">
                     <label class="form-check-label" for="ATMron">RON</label>
-                    <input class="form-check-input" type="radio" id="ATMron" checked name="ATMOptions" value="RON" ng-model="$ctrl.ATMmoneda">
+                    <input class="form-radio-input" type="radio" id="ATMron" name="ATMOptions" value="RON" ng-model="$ctrl.ATMmoneda">
                 </div>
                 <div class="form-check col-lg-1 col-md-1 col-sm-1 col-xs-1">
                     <label class="form-check-label" for="ATMeur">EUR</label>
-                    <input class="form-check-input" type="radio" id="ATMeur" name="ATMOptions" value="EUR" ng-model="$ctrl.ATMmoneda">
+                    <input class="form-radio-input" type="radio" id="ATMeur" name="ATMOptions" value="EUR" ng-model="$ctrl.ATMmoneda">
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <label for="inputSrcATM">Sursa finantare</label>
@@ -197,25 +197,25 @@
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 checks">
                     <label for="srcTEChoiceST" class="form-check-label">ST</label>
-                    <input type="checkbox" class="form-check-input" id="srcTEChoiceST" ng.model="$ctrl.cheltTranspEST" ng-true-value="true" ng-false-value="false">
+                    <input type="checkbox" class="form-check-input" id="srcTEChoiceST" ng-model="$ctrl.cheltTranspEST" ng-true-value="true" ng-false-value="false">
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 checks">
                     <label for="srcTEChoiceTA" class="form-check-label">TA</label>
-                    <input type="checkbox" class="form-check-input" id="srcTEChoiceTA" ng.model="$ctrl.cheltTranspETA" ng-true-value="true" ng-false-value="false">
+                    <input type="checkbox" class="form-check-input" id="srcTEChoiceTA" ng-model="$ctrl.cheltTranspETA" ng-true-value="true" ng-false-value="false">
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 checks">
                     <label for="srcTEChoiceOM" class="form-check-label">Organizare mobilitati</label>
-                    <input type="checkbox" class="form-check-input" id="srcTEChoiceOM" ng.model="$ctrl.cheltTranspEOM" ng-true-value="true" ng-false-value="false">
+                    <input type="checkbox" class="form-check-input" id="srcTEChoiceOM" ng-model="$ctrl.cheltTranspEOM" ng-true-value="true" ng-false-value="false">
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 checks">
                     <label for="srcTEChoiceC" class="form-check-label">Conferinte</label>
-                    <input type="checkbox" class="form-check-input" id="srcTEChoiceC" ng.model="$ctrl.cheltTranspEC" ng-true-value="true" ng-false-value="false">
+                    <input type="checkbox" class="form-check-input" id="srcTEChoiceC" ng-model="$ctrl.cheltTranspEC" ng-true-value="true" ng-false-value="false">
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 checks">
                     <label for="otherChoice" class="form-check-label">Alta sursa</label>
-                    <input type="checkbox" class="form-check-input" id="srcTEChoiceA" ng.model="$ctrl.cheltTranspEA" ng-true-value="true" ng-false-value="false">
+                    <input type="checkbox" class="form-check-input" id="srcTEChoiceA" ng-model="$ctrl.cheltTranspEA" ng-true-value="true" ng-false-value="false">
                     <input type="text" class="form-control mormontInput" id="srcTEChoiceASP"
-                           placeholder="Sursa finantare..." ng.model="$ctrl.cheltTranspEAltele">
+                           placeholder="Sursa finantare..." ng-model="$ctrl.cheltTranspEAltele">
                 </div>
             </div>
 
@@ -298,25 +298,25 @@
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 checks">
                     <label for="srcTESChoiceST" class="form-check-label">ST</label>
-                    <input type="checkbox" class="form-check-input" id="srcTESChoiceST" ng.model="$ctrl.cheltSEST" ng-true-value="true" ng-false-value="false">
+                    <input type="checkbox" class="form-check-input" id="srcTESChoiceST" ng-model="$ctrl.cheltSEST" ng-true-value="true" ng-false-value="false">
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 checks">
                     <label for="srcTESChoiceTA" class="form-check-label">TA</label>
-                    <input type="checkbox" class="form-check-input" id="srcTESChoiceTA" ng.model="$ctrl.cheltSETA" ng-true-value="true" ng-false-value="false">
+                    <input type="checkbox" class="form-check-input" id="srcTESChoiceTA" ng-model="$ctrl.cheltSETA" ng-true-value="true" ng-false-value="false">
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 checks">
                     <label for="srcTESChoiceOM" class="form-check-label">Organizare mobilitati</label>
-                    <input type="checkbox" class="form-check-input" id="srcTESChoiceOM" ng.model="$ctrl.cheltSEOM" ng-true-value="true" ng-false-value="false">
+                    <input type="checkbox" class="form-check-input" id="srcTESChoiceOM" ng-model="$ctrl.cheltSEOM" ng-true-value="true" ng-false-value="false">
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 checks">
                     <label for="srcTESChoiceC" class="form-check-label">Conferinte</label>
-                    <input type="checkbox" class="form-check-input" id="srcTESChoiceC" ng.model="$ctrl.cheltSEC" ng-true-value="true" ng-false-value="false">
+                    <input type="checkbox" class="form-check-input" id="srcTESChoiceC" ng-model="$ctrl.cheltSEC" ng-true-value="true" ng-false-value="false">
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 checks">
                     <label for="otherChoice" class="form-check-label">Alta sursa</label>
-                    <input type="checkbox" class="form-check-input" id="srcTESChoiceA" ng.model="$ctrl.cheltSEA" ng-true-value="true" ng-false-value="false">
+                    <input type="checkbox" class="form-check-input" id="srcTESChoiceA" ng-model="$ctrl.cheltSEA" ng-true-value="true" ng-false-value="false">
                     <input type="text" class="form-control mormontInput" id="srcTESChoiceASP"
-                           placeholder="Sursa finantare..." ng.model="$ctrl.cheltSEAltele">
+                           placeholder="Sursa finantare..." ng-model="$ctrl.cheltSEAltele">
                 </div>
             </div>
 
@@ -421,7 +421,7 @@
         </div>
     </div>
 
-    <!--ALTE CHELTUIELI-->
+    ALTE CHELTUIELI
     <div class="form-group row col-lg-12 col-md-12 col-sm-12 col-xs-12 chenar">
         <div class="nested col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 row sub-title">
@@ -690,7 +690,10 @@
     </div>
     <div class="form-group row col-lg-12 col-md-12 col-sm-12 col-xs-12 chenar">
         <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-            <button type="submit" class="btn btn-default submit mormontButton" ng-click="$ctrl.submitForm()">Submit</button>
+            <button type="submit" class="btn btn-default submit mormontButton" ng-click="$ctrl.submitForm()">Inregistreaza cerere</button>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                <button class="btn btn-default submit mormontButton" ng-click="">Inregistreaza cerere</button>
         </div>
     </div>
 </form>
