--- a/app/side-bar/side-bar.html
+++ b/app/side-bar/side-bar.html
@@ -10,7 +10,7 @@
         <button type="button" class="btn btn-default mormontInput" ng-click="$ctrl.handleDRForm()" ng-disabled="$ctrl.getDRFormState()">Creeaza document 'Dispozitia rectorului'</button>
     </li>
     <li>
-        <button type="button" class="btn btn-default mormontInput" ng-click="" ng-disabled="$ctrl.getDRFormState()">Creeaza document 'Desfasurarea achizitiilor'</button>
+        <button type="button" class="btn btn-default mormontInput" ng-click="$ctrl.handleDAForm()" ng-disabled="$ctrl.getDAFormState()">Creeaza document 'Desfasurarea achizitiilor'</button>
     </li>
     <li>
         <button type="button" class="btn btn-default mormontInput" ng-click="$ctrl.logout()">Logout</button>
