--- a/app/dr-doc/drform-tag.html
+++ b/app/dr-doc/drform-tag.html
@@ -622,15 +622,15 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 centered-vertically">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <label>Suma (EUR)</label>
-                    <input type="number" class="form-control mormontInput" disabled value="{{$ctrl.getEURSum()}}">
+                    <input type="number" class="form-control mormontInput" disabled ng-value="$ctrl.getEURSum()">
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <label>Suma (RON)</label>
-                    <input type="number" class="form-control mormontInput" disabled value="{{$ctrl.getRONSum()}}">
+                    <input type="number" class="form-control mormontInput" disabled ng-value="$ctrl.getRONSum()">
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <label>Suma (USD)</label>
-                    <input type="number" class="form-control mormontInput" disabled value="{{$ctrl.getUSDSum()}}">
+                    <input type="number" class="form-control mormontInput" disabled ng-value="$ctrl.getUSDSum()">
                 </div>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 row sub-title">
@@ -689,11 +689,11 @@
         </div>
     </div>
     <div class="form-group row col-lg-12 col-md-12 col-sm-12 col-xs-12 chenar">
-        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
             <button type="submit" class="btn btn-default submit mormontButton" ng-click="$ctrl.submitForm()">Inregistreaza cerere</button>
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-                <button class="btn btn-default submit mormontButton" ng-click="">Inregistreaza cerere</button>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                <button class="btn btn-default submit mormontButton" ng-click="$ctrl.handleForm()">Renunta</button>
         </div>
     </div>
 </form>
