--- a/app/rn-doc/rnform-tag.html
+++ b/app/rn-doc/rnform-tag.html
@@ -1,4 +1,4 @@
-<form class="formDA">
+<ng-form class="formDA">
     <div class="form-group row col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="form-title">Referat de necesitate</div>
     </div>
@@ -7,7 +7,7 @@
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
             <label for="inputFacUC">Facultate/Unitatea de cercetare</label>
             <input type="text" class="form-control mormontInput" id="inputFacUC"
-                   placeholder="Facultate/Unitate de cercetare..." ng-model="$ctrl.facultateDA">
+                   placeholder="Facultate/Unitate de cercetare..." ng-model="$ctrl.rN.facultateDA">
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
             <label for="inputDepLab">Departamentul/Laboratorul</label>
@@ -39,12 +39,12 @@
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                     <label for="inputSumB">Suma (RON)</label>
                     <input type="number" class="form-control mormontInput" id="inputSumB"
-                           value="{{$ctrl.getSumaTotalaSolicitata()}}" placeholder="0" disabled>
+                           ng-value="$ctrl.getSumaTotalaSolicitata()" placeholder="0" disabled>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <label>Suma (RON) aprobata de serviciul `Contabilitate`</label>
                     <input type="number" class="form-control mormontInput"
-                           value="{{$ctrl.getSumaTotalaAprobata()}}" placeholder="0" disabled>
+                           ng-value="$ctrl.getSumaTotalaAprobata()" placeholder="0" disabled>
                 </div>
             </div>
 
@@ -53,7 +53,7 @@
                     <label>VENITURI PROPRII</label>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                    <label for="inputSumVP">Suma (RON)</label>
+                    <label for="inputSumVP">Suma (RON) {{$ctrl.sumaVP}}</label>
                     <input type="number" class="form-control mormontInput" id="inputSumVP" ng-model="$ctrl.sumaVP"
                            value="0" placeholder="0">
                 </div>
@@ -142,12 +142,12 @@
                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                             <label>Suma (RON)</label>
                             <input type="number" class="form-control mormontInput"
-                                   value="{{$ctrl.getSumaCercetareSolicitata()}}" placeholder="0" disabled>
+                                   ng-value="$ctrl.getSumaCercetareSolicitata()" placeholder="0" disabled>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                             <label>Suma (RON) aprobata de serviciul `Contabilitate`</label>
                             <input type="number" class="form-control mormontInput"
-                                   value="{{$ctrl.getSumaCercetareAprobata()}}" placeholder="0" disabled>
+                                   ng-value="$ctrl.getSumaCercetareAprobata()" placeholder="0" disabled>
                         </div>
                     </div>
                 </div>
@@ -253,12 +253,12 @@
                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                             <label>Suma (RON)</label>
                             <input type="number" class="form-control mormontInput"
-                                   value="{{$ctrl.getSumaAlteleSolicitata()}}" placeholder="0" disabled>
+                                   ng-value="$ctrl.getSumaAlteleSolicitata()" placeholder="0" disabled>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                             <label>Suma (RON) aprobata de serviciul `Contabilitate`</label>
                             <input type="number" class="form-control mormontInput"
-                                   value="{{$ctrl.getSumaAlteleAprobata()}}" placeholder="0" disabled>
+                                   ng-value="$ctrl.getSumaAlteleAprobata()" placeholder="0" disabled>
                         </div>
                     </div>
                 </div>
@@ -391,12 +391,12 @@
         </div>
     </div>
     <div class="form-group row col-lg-12 col-md-12 col-sm-12 col-xs-12 chenar">
-        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
             <button type="submit" class="btn btn-default submit mormontButton" ng-click="$ctrl.submitForm()">Inregistreaza cerere</button>
         </div>
-        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-            <button class="btn btn-default submit mormontButton" ng-click="">Renunta</button>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+            <button class="btn btn-default submit mormontButton" ng-click="$ctrl.handleForm()">Renunta</button>
         </div>
 
     </div>
-</form>
+</ng-form>
