--- a/app/rn-doc/rnform-tag.html
+++ b/app/rn-doc/rnform-tag.html
@@ -305,8 +305,12 @@
                     </tr>
                 </table>
             </div>
-            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                 <button class="btn btn-default submit mormontButton" ng-click="$ctrl.addReccord()">Adauga inregistrare
+                </button>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                <button class="btn btn-default submit mormontButton" ng-click="">Elimina inregistrare
                 </button>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 centered-vertically chenar">
