--- a/app/dr-doc/drform-tag.html
+++ b/app/dr-doc/drform-tag.html
@@ -11,7 +11,7 @@
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
             <label for="inputFD">Facultate/Departament</label>
             <input type="text" class="form-control mormontInput" id="inputFD"
-                   placeholder="Facultate/Departament..." ng-model="$ctrl.facultateDA">
+                   placeholder="Facultate/Departament..." ng-model="$ctrl.facultate">
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
             <label for="inputDest">Destinatie (Tara, Localitatea)</label>
