Logout, save docs implemented

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="navbar-tag/navbar-tag.css" />
     <link rel="stylesheet" type="text/css" href="rn-doc/rnform-tag.css" />
     <link rel="stylesheet" type="text/css" href="side-bar/side-bar.css" />
+    <link rel="stylesheet" type="text/css" href="users-tag/users-tag.css" />
     <!-- /include -->
 </head>
 <body ng-app="EasyDocsUBBApp">
@@ -46,6 +47,7 @@
     <script src="navbar-tag/navbar-tag.js"></script>
     <script src="rn-doc/rnform-tag.js"></script>
     <script src="side-bar/side-bar.js"></script>
+    <script src="users-tag/users-tag.js"></script>
     <!-- /include -->
     <script src="//localhost:35729/livereload.js"></script>
 </body>
