--- a/app/main-layout/main-layout.html
+++ b/app/main-layout/main-layout.html
@@ -40,6 +40,12 @@
                 <fluxdocs-tag></fluxdocs-tag>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                 ng-if="$ctrl.getActiveTab() == 5">
+                <users-tag></users-tag>
+            </div>
+        </div>
     </div>
 </div>
 </div>
